--- a/HomeWorks/appsettings.json
+++ b/HomeWorks/appsettings.json
@@ -8,5 +8,15 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "RS0605Connection": "Data Source=DESKTOP-NNRTTL7;Database=RS0605;TrustServerCertificate=True;User ID=A123;Password=000000"
+
+  },
+  "MailSettings": {
+    "Host": "smtp.gmail.com",
+    "DefaultCredentials": false,
+    "Port": 587,
+    "Name": "RS委託網",
+    "EmailId": "rumpelstiltskin0123@gmail.com",
+    "Password": "imxsktsaiumjcirs",
+    "UseSSL": true
   }
 }
